--- a/grill-server/src/main/webapp/static/index.html
+++ b/grill-server/src/main/webapp/static/index.html
@@ -116,7 +116,7 @@
 	</div>
 
 	<!-- Additional stylsheets -->
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.4.0/codemirror.min.css">
+	<link rel="stylesheet" href="css/codemirror.min.css">
 	<style type="text/css">
 	.CodeMirror {
 		border: 1px solid #ccc;
@@ -125,12 +125,15 @@
 	</style>
 
 	<!-- Additional Scripts -->
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.4.0/codemirror.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.4.0/mode/sql/sql.js"></script>
-	<script type="text/javascript" src="cookie.js"></script>
-	<script type="text/javascript" src="util.js"></script>
-	<script type="text/javascript" src="session.js"></script>
-	<script type="text/javascript" src="index.js"></script>
+	<script src="js/libs/codemirror.min.js"></script>
+	<script src="js/libs/sql.js"></script>
+	<script type="text/javascript" src="js/libs/cookie.js"></script>
+
+	<script type="text/javascript" src="js/util.js"></script>
+	
+	<script type="text/javascript" src="js/models/session.js"></script>
+	
+	<script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
