Changed session handling in UI API

--- a/grill-server/src/main/webapp/static/index.html
+++ b/grill-server/src/main/webapp/static/index.html
@@ -132,6 +132,7 @@
 	<script type="text/javascript" src="js/util.js"></script>
 	
 	<script type="text/javascript" src="js/models/session.js"></script>
+	<script type="text/javascript" src="js/models/query.js"></script>
 	
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
