UI changes for submitting query

--- a/grill-server/src/main/webapp/static/index.html
+++ b/grill-server/src/main/webapp/static/index.html
@@ -77,6 +77,7 @@
 						<textarea id="query" class="form-control" rows="3"></textarea>
 					</div>
 					<button type="submit" class="btn btn-success">Submit Query</button>
+					<img class="loading" src="http://preloaders.net/preloaders/335/Thin%20broken%20ring.gif">
 				</form>
 
 				<!-- Results -->
@@ -121,6 +122,12 @@
 	.CodeMirror {
 		border: 1px solid #ccc;
 		height: 150px;
+	}
+	#query-form button {
+		margin-right: 10px;
+	}
+	#query-form .loading {
+		margin-right: 10px;
 	}
 	</style>
 
