--- a/grill-server/src/main/webapp/static/index.html
+++ b/grill-server/src/main/webapp/static/index.html
@@ -27,7 +27,7 @@
     <![endif]-->
 </head>
 <body>
-	<div class="container">
+	<div id="queryui" class="container">
 		<nav class="navbar navbar-inverse" role="navigation">
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
@@ -116,6 +116,36 @@
 		</div>
 	</div>
 
+	<div id="loginui" class="container">
+	    <div class="row">
+			<div class="col-md-4 col-md-offset-4">
+	    		<div class="panel panel-default">
+				  	<div class="panel-heading">
+				    	<h3 class="panel-title">Grill UI Login</h3>
+				 	</div>
+				  	<div class="panel-body">
+				    	<form id="login-form" accept-charset="UTF-8" role="form">
+	                    <fieldset>
+				    	  	<div class="form-group">
+				    		    <input id="email" class="form-control" placeholder="E-mail" name="email" type="text">
+				    		</div>
+				    		<div class="form-group">
+				    			<input id="password" class="form-control" placeholder="Password" name="password" type="password" value="">
+				    		</div>
+				    		<div class="checkbox">
+				    	    	<label>
+				    	    		<input name="remember" type="checkbox" value="Remember Me"> Remember Me
+				    	    	</label>
+				    	    </div>
+				    		<input id="login-btn" class="btn btn-lg btn-success btn-block" type="submit" value="Login">
+				    	</fieldset>
+				      	</form>
+				    </div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<!-- Additional stylsheets -->
 	<link rel="stylesheet" href="css/codemirror.min.css">
 	<style type="text/css">
@@ -128,6 +158,9 @@
 	}
 	#query-form .loading {
 		margin-right: 10px;
+	}
+	#loginui {
+		margin-top: 50px;
 	}
 	</style>
 
