--- a/grill-server/src/main/webapp/static/index.html
+++ b/grill-server/src/main/webapp/static/index.html
@@ -82,7 +82,7 @@
 
 				<!-- Results -->
 				<h3>Results</h3>
-				<table class="table table-bordered">
+				<!-- <table class="table table-bordered">
 					<thead>
 						<tr>
 							<th>ID</th>
@@ -102,7 +102,7 @@
 							<td>Another Value</td>
 						</tr>
 					</tbody>
-				</table>
+				</table> -->
 				<ul class="pagination">
 					<li><a href="#">&laquo;</a></li>
 					<li><a href="#">1</a></li>
@@ -173,6 +173,8 @@
 	
 	<script type="text/javascript" src="js/models/session.js"></script>
 	<script type="text/javascript" src="js/models/query.js"></script>
+	<script type="text/javascript" src="js/models/row.js"></script>
+	<script type="text/javascript" src="js/models/resultset.js"></script>
 	
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
