--- a/grill-server/src/main/webapp/static/index.html
+++ b/grill-server/src/main/webapp/static/index.html
@@ -170,7 +170,8 @@
 	<script type="text/javascript" src="js/libs/cookie.js"></script>
 
 	<script type="text/javascript" src="js/util.js"></script>
-	
+
+    <script type="text/javascript" src="js/models/meta.js"></script>
 	<script type="text/javascript" src="js/models/session.js"></script>
 	<script type="text/javascript" src="js/models/query.js"></script>
 	<script type="text/javascript" src="js/models/row.js"></script>
