Added UI to display and search metastore data

--- a/grill-server/src/main/webapp/static/index.html
+++ b/grill-server/src/main/webapp/static/index.html
@@ -56,7 +56,7 @@
 			<!-- Sidebar -->
 			<div class="col-md-3">
 				<div class="input-group">
-					<input type="text" class="form-control" placeholder="Filter..">
+					<input id="meta-input" type="text" class="form-control" placeholder="Filter..">
 					<span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
 				</div>
 				<ul id="meta-views" class="list-group">
@@ -156,6 +156,9 @@
 	}
 	.panel-footer button {
 		margin-left: 20px;
+	}
+	#meta-views li {
+		cursor: pointer;
 	}
 	</style>
 
