--- a/grill-server/src/main/webapp/static/index.html
+++ b/grill-server/src/main/webapp/static/index.html
@@ -11,7 +11,8 @@
 
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Optional theme -->
     <!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> -->
@@ -96,7 +97,7 @@
 		</div>
 
 		<div id="historyui" class="row">
-			
+			<div class="col-md-12"></div>
 		</div>
 	</div>
 
@@ -135,7 +136,7 @@
 	<style type="text/css">
 	.CodeMirror {
 		border: 1px solid #ccc;
-		height: 150px;
+		height: 75px;
 	}
 	#query-form button {
 		margin-right: 10px;
@@ -160,6 +161,12 @@
 	#meta-views li {
 		cursor: pointer;
 	}
+	#historyui .CodeMirror {
+		height: 50px;
+	}
+	#historyui div table th:nth-child(1), #historyui div table th:nth-child(3) {
+		cursor: pointer;
+	}
 	</style>
 
 	<!-- Additional Scripts -->
@@ -167,6 +174,7 @@
 	<script src="js/libs/sql.js"></script>
 	<script type="text/javascript" src="js/libs/cookie.js"></script>
 	<script type="text/javascript" src="js/libs/moment.js"></script>
+	<script type="text/javascript" src="js/libs/stupidtable.min.js"></script>
 
 	<script type="text/javascript" src="js/util.js"></script>
 
@@ -176,8 +184,8 @@
 	<script type="text/javascript" src="js/models/row.js"></script>
 	<script type="text/javascript" src="js/models/resultset.js"></script>	
 
-	<script type="text/javascript" src="js/querylistview.js"></script>
-	<script type="text/javascript" src="js/historyview.js"></script>
+	<script type="text/javascript" src="js/historyrowview.js"></script>
+	<script type="text/javascript" src="js/historytableview.js"></script>
 	<script type="text/javascript" src="js/metaview.js"></script>
 	
 	<script type="text/javascript" src="js/index.js"></script>
