Added Histogram for result column

--- a/grill-server/src/main/webapp/static/index.html
+++ b/grill-server/src/main/webapp/static/index.html
@@ -245,6 +245,7 @@
 	<script type="text/javascript" src="js/metaview.js"></script>
 	
 	<script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/libs/jquery.flot.js"></script>
 
 </body>
 
