LENS-30 : Resolves login issues in UI (Raju Bairishetti via amareshwari)

--- a/lens-server/src/main/webapp/static/index.html
+++ b/lens-server/src/main/webapp/static/index.html
@@ -69,6 +69,7 @@
 						<li><a href="#query">Query</a></li>
 						<li><a href="#history">Query History</a></li>
 					</ul>
+					<button id="log-out" type="button">LogOut</button>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
@@ -185,6 +186,11 @@
 	}
 	#loginui {
 		margin-top: 50px;
+	}
+	button#log-out {
+		float: right;
+		margin-top: 10px;
+		margin-left: 0px;
 	}
 	.panel-body .CodeMirror {
 		height: auto;
